After talk with Kui, updated retraing.py

--- a/in_development/edward/cell_detector/Calc_mean_filter.ipynb
+++ b/in_development/edward/cell_detector/Calc_mean_filter.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +63,8 @@
    "outputs": [],
    "source": [
     "animal = 'DK184'\n",
-    "section = 57\n",
-    "channel = 1\n",
+    "section = 204\n",
+    "channel = 3\n",
     "prep_path = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'"
    ]
   },
@@ -94,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resize = True\n",
+    "resize = False\n",
     "if resize:\n",
     "    filepath = os.path.join(prep_path, f'C{channel}/full_aligned', tif)\n",
     "    startr = 6000\n",
@@ -192,7 +184,7 @@
    "outputs": [],
    "source": [
     "#vimg=annotated_img[in_row_min:in_row_max, in_col_min: in_col_max]\n",
-    "increaser = 1\n",
+    "increaser = 15\n",
     "show_image(annotated_img, increaser=increaser,_title=f'{animal} C{channel}, section: {section} predictions: {len(positives)}')"
    ]
   },
@@ -210,40 +202,6 @@
     "    plt.subplot(10,10,i+1)\n",
     "    plt.imshow(positives[i][2], cmap=\"gray\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_dist(uimg):\n",
-    "    H=uimg.flatten()\n",
-    "    H=np.sort(H)\n",
-    "\n",
-    "    H=H[0:-1:1000]\n",
-    "    print(H.shape)\n",
-    "    H1 = np.arange(0,1,1./H.shape[0])\n",
-    "    H1 = H1[:H.shape[0]]\n",
-    "    print(H1.shape)\n",
-    "\n",
-    "    plt.plot(H, H1)\n",
-    "    plt.grid()\n",
-    "    plt.figure()\n",
-    "    plt.hist(H,bins=100);\n",
-    "plot_dist(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "end = min(100, len(positives))\n",
-    "for i in range(len(positives[0:end])):\n",
-    "    plt.hist(positives[i][2].flatten(),bins=100);"
    ]
   },
   {
@@ -273,9 +231,7 @@
     "\n",
     "import pickle as pk\n",
     "with open('mean.pkl','wb') as pkl_file:\n",
-    "    pk.dump({'Mean':Mean},pkl_file)\n",
-    "\n",
-    "!ls -l *.pkl"
+    "    pk.dump({'Mean':Mean},pkl_file)"
    ]
   },
   {
@@ -284,34 +240,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S8 = (S/256).astype(np.uint8)\n",
-    "mid = S.shape[0] // 2\n",
-    "S80 = S8[mid, ...]\n",
-    "contours, _ = cv2.findContours(S80, cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
-    "ids, counts = np.unique(contours[0], return_counts=True)\n",
-    "ids,counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnt = contours[0]\n",
-    "M = cv2.moments(cnt)\n",
-    "Hm = cv2.HuMoments(M)\n",
-    "cv2.drawContours(S80, [cnt], -1, (0,255,255), 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(S80, cmap=\"seismic\")\n",
+    "new_mean = cv2.normalize(Mean, None, 255, 0, cv2.NORM_MINMAX, cv2.CV_8U)\n",
+    "plt.imshow(new_mean, cmap=\"seismic\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = ['area', 'height', 'width', 'corr_CH1', 'energy_CH1', 'corr_CH3', 'energy_CH3', 'm00CH_3', 'm10CH_3', 'm01CH_3', 'm20CH_3', 'm11CH_3', 'm02CH_3', 'm30CH_3', 'm21CH_3', 'm12CH_3', 'm03CH_3', 'mu20CH_3', 'mu11CH_3', 'mu02CH_3', 'mu30CH_3', 'mu21CH_3', 'mu12CH_3', 'mu03CH_3', 'nu20CH_3', 'nu11CH_3', 'nu02CH_3', 'nu30CH_3', 'nu21CH_3', 'nu12CH_3', 'nu03CH_3', 'h0_CH_3', 'h1_CH_3', 'h2_CH_3', 'h3_CH_3', 'h4_CH_3', 'h5_CH_3', 'h6_CH_3', 'contrast1', 'contrast3'] ['area', 'height', 'width', 'corr_CH1', 'energy_CH1', 'corr_CH3', 'energy_CH3', 'm00_mask', 'm10_mask', 'm01_mask', 'm20_mask', 'm11_mask', 'm02_mask', 'm30_mask', 'm21_mask', 'm12_mask', 'm03_mask', 'mu20_mask', 'mu11_mask', 'mu02_mask', 'mu30_mask', 'mu21_mask', 'mu12_mask', 'mu03_mask', 'nu20_mask', 'nu11_mask', 'nu02_mask', 'nu30_mask', 'nu21_mask', 'nu12_mask', 'nu03_mask', 'h0_mask', 'h1_mask', 'h2_mask', 'h3_mask', 'h4_mask', 'h5_mask', 'h6_mask', 'contrast1', 'contrast3']\n",
+    "l2 = [m02CH_3, h2_CH_3, nu11CH_3, nu12CH_3, m21CH_3, nu02CH_3, m10CH_3, mu11CH_3, mu21CH_3, h1_CH_3, m12CH_3, m03CH_3, mu20CH_3, mu02CH_3, nu21CH_3, nu20CH_3, nu30CH_3, h6_CH_3, nu03CH_3, h0_CH_3, h5_CH_3, h3_CH_3, mu30CH_3, mu03CH_3, h4_CH_3, m20CH_3, m30CH_3, m01CH_3, m11CH_3, m00CH_3, mu12CH_3 in input data\n",
+    "training data did not have the following fields: m21_mask, mu30_mask, nu30_mask, nu12_mask, mu12_mask, m01_mask, nu11_mask, nu02_mask, h1_mask, m02_mask, h4_mask, mu20_mask, h0_mask, m30_mask, m12_mask, nu21_mask, nu03_mask, m10_mask, h6_mask, mu21_mask, h3_mask, h5_mask, m11_mask, mu02_mask, m03_mask, m00_mask, mu11_mask, h2_mask, mu03_mask, m20_mask, nu20_mask"
    ]
   }
  ],
