Got create atlas working well with 10um

--- a/in_development/Bili/notebook/landmark-registration-analytical.ipynb
+++ b/in_development/Bili/notebook/landmark-registration-analytical.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,11 +62,21 @@
       "origin 3N_L [-165.58293065 -127.18518508  -38.94194041]\n",
       "center 3N_L [-135.44472549 -108.49438786  -13.52838526]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([364.55527451, 391.50561214, 143.23580737])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "from scipy import ndimage\n",
+    "from scipy.ndimage import center_of_mass\n",
     "\n",
     "def get_atlas_centers(\n",
     "    atlas_box_size=(1000, 1000, 300),\n",
@@ -97,7 +107,7 @@
     "        volume = np.flip(volume, axis=0)\n",
     "\n",
     "        # computer volume center of mass in raw array coordinates\n",
-    "        center = (origin + ndimage.measurements.center_of_mass(volume))\n",
+    "        center = (origin + center_of_mass(volume))\n",
     "        if '3N_L' in name:\n",
     "            print('center',name, center)\n",
     "\n",
@@ -109,7 +119,75 @@
     "    return atlas_centers\n",
     "\n",
     "atlas_centers = get_atlas_centers()\n",
-    "#atlas_centers['1_L']"
+    "atlas_centers['3N_L']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10N_L [703.3414018  547.92857128 135.63021318]\n",
+      "10N_R [703.3414018  547.92857128 164.36978682]\n",
+      "12N [697.22688379 567.09882511 149.25      ]\n",
+      "3N_L [364.55527451 391.50561214 143.23580737]\n",
+      "3N_R [364.55527451 391.50561214 156.76419263]\n",
+      "4N_L [399.44078717 396.10405799 137.62875327]\n",
+      "4N_R [399.44078717 396.10405799 162.37124673]\n",
+      "5N_L [456.79919285 502.07948465  81.90055473]\n",
+      "5N_R [456.79919285 502.07948465 218.09944527]\n",
+      "6N_L [517.15970035 512.49218793 132.31348358]\n",
+      "6N_R [517.15970035 512.49218793 167.68651642]\n",
+      "7N_L [529.63289179 614.42425173  92.59598246]\n",
+      "7N_R [529.63289179 614.42425173 207.40401754]\n",
+      "7n_L [494.89181904 540.30703027  96.03164647]\n",
+      "7n_R [494.89181904 540.30703027 203.96835353]\n",
+      "AP [702.30623016 525.65250533 151.        ]\n",
+      "Amb_L [612.43978309 603.82579638  88.26958361]\n",
+      "Amb_R [612.43978309 603.82579638 211.73041639]\n",
+      "DC_L [583.28847485 456.49543513  42.08415749]\n",
+      "DC_R [583.28847485 456.49543513 257.91584251]\n",
+      "IC [496.75289891 251.69323784 150.        ]\n",
+      "LC_L [496.19734322 442.80793463 108.22512749]\n",
+      "LC_R [496.19734322 442.80793463 191.77487251]\n",
+      "LRt_L [688.19368823 646.86274546  93.75492693]\n",
+      "LRt_R [688.19368823 646.86274546 206.24507307]\n",
+      "PBG_L [396.0376214  372.98520464  56.99137903]\n",
+      "PBG_R [396.0376214  372.98520464 243.00862097]\n",
+      "Pn_L [328.33216192 593.08466136 122.74053381]\n",
+      "Pn_R [328.33216192 593.08466136 177.25946619]\n",
+      "RMC_L [328.95311703 439.51092734 125.38685825]\n",
+      "RMC_R [328.95311703 439.51092734 174.61314175]\n",
+      "RtTg [378.45412773 562.24769428 148.25      ]\n",
+      "SC [371.98228407 258.87129162 151.5       ]\n",
+      "SNC_L [268.51504099 482.58140717  89.46709593]\n",
+      "SNC_R [268.51504099 482.58140717 210.53290407]\n",
+      "SNR_L [301.87504931 477.68259887  79.54208902]\n",
+      "SNR_R [301.87504931 477.68259887 220.45791098]\n",
+      "Sp5C_L [756.28290175 582.03350839  82.7739439 ]\n",
+      "Sp5C_R [756.28290175 582.03350839 217.2260561 ]\n",
+      "Sp5I_L [679.32639908 550.52235458  54.31408373]\n",
+      "Sp5I_R [679.32639908 550.52235458 245.68591627]\n",
+      "Sp5O_L [601.37756408 549.49770082  56.91774108]\n",
+      "Sp5O_R [601.37756408 549.49770082 243.08225892]\n",
+      "Tz_L [427.20793616 620.22428009 124.34797215]\n",
+      "Tz_R [427.20793616 620.22428009 175.65202785]\n",
+      "VCA_L [504.07408582 495.00896545  28.26609477]\n",
+      "VCA_R [504.07408582 495.00896545 271.73390523]\n",
+      "VCP_L [560.0778784  513.78439848  34.33497487]\n",
+      "VCP_R [560.0778784  513.78439848 265.66502513]\n",
+      "VLL_L [378.01135349 515.47069494  75.80261979]\n",
+      "VLL_R [378.01135349 515.47069494 224.19738021]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in atlas_centers.items():\n",
+    "    print(k,v)"
    ]
   },
   {
@@ -2640,7 +2718,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2714,6 +2794,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrpath = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV7/atlasV7.npz'\n",
+    "arr = np.load(arrpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr0 = arr['arr_0']\n",
+    "type(arr0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tifffile import imwrite\n",
+    "file_path = '/net/birdstore/Active_Atlas_Data/data_root/atlas_data/atlasV7/atlasV7.tif'\n",
+    "imwrite(file_path, arr0, compression='LZW', bigtiff=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2725,7 +2847,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2739,7 +2861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
