--- a/in_development/Litao/load_atlas_create_volume.ipynb
+++ b/in_development/Litao/load_atlas_create_volume.ipynb
@@ -16,15 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'library'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(PATH)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#from utilities.utilities_cvat_neuroglancer import get_structure_number, get_segment_properties, NumpyToNeuroglancer\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlibrary\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontrollers\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSqlController\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SqlController\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'library'"
+     ]
+    }
+   ],
    "source": [
     "HOME = os.path.expanduser(\"~\")\n",
     "PATH = os.path.join(HOME, 'programming/pipeline_utility/src')\n",
     "sys.path.append(PATH)\n",
-    "from utilities.utilities_cvat_neuroglancer import get_structure_number, get_segment_properties, NumpyToNeuroglancer\n",
-    "from Controllers.SqlController import SqlController"
+    "#from utilities.utilities_cvat_neuroglancer import get_structure_number, get_segment_properties, NumpyToNeuroglancer\n",
+    "from library.controllers.SqlController import SqlController"
    ]
   },
   {
@@ -189,7 +201,7 @@
    "hash": "2bd29f7b10431261d8beeb897d602198a8ccc2be7cc6f93af9f327223ffe0508"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
