Cleaned up atlas code

--- a/in_development/Bili/notebook/landmark-registration-analytical.ipynb
+++ b/in_development/Bili/notebook/landmark-registration-analytical.ipynb
@@ -342,7 +342,10 @@
     "    [53.29533787371052]\n",
     "])\n",
     "t_man = np.diag(reference_scales) @ t_man_scaled\n",
-    "t_man"
+    "t_man\n",
+    "\n",
+    "transformed_points = apply_affine_transformation(points, matrix)\n",
+    "print(transformed_points)"
    ]
   },
   {
